<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnInspiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_inspiration"/>
    <ScrollView
        android:layout_below="@id/btnInspiration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint"
            android:autofillHints="@string/edit_text_hint"
            android:inputType="text"/>
        <!--TODO: Check autofillHints feature-->

        <Button
            android:id="@+id/btnDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etDescription"
            android:text="@string/btn_edit_description"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnDescription"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_person"/>
            <RadioButton
                android:id="@+id/radioBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/second_person"/>
            <RadioButton
                android:id="@+id/radioBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/third_person"/>
        </RadioGroup>
    </RelativeLayout>
</RelativeLayout>